feat: add stream last modified and DRC info, update client info, and improve URL parsing in descriptions